fix: Ansible 2.20 互換性修正 + 適用確認済み
- ロール変数を group_vars から各ロールの defaults/main.yml に移動
  (Ansible 2.20 の変数解決の変更に対応)
- site.yml を import_playbook から直接 play 定義に変更
- sshd → ssh (Ubuntu サービス名修正)
- claude_code: become_user を su 経由に変更 (ACL 不要)
- 両 VM に適用済み、changed=0 で冪等性確認済み

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,9 +1,20 @@
 ---
 - name: 共通設定 + セキュリティ強化
-  ansible.builtin.import_playbook: playbooks/common.yml
+  hosts: all
+  roles:
+    - common
+    - security
 
 - name: NFS Server 構成
-  ansible.builtin.import_playbook: playbooks/nfs-server.yml
+  hosts: nfs_servers
+  roles:
+    - nfs_server
 
 - name: AI Commander 構成
-  ansible.builtin.import_playbook: playbooks/ai-commander.yml
+  hosts: ai_commanders
+  roles:
+    - dev_user
+    - cli_tools
+    - mosh
+    - nfs_client
+    - claude_code
