--- a/ansible/roles/security/defaults/main.yml
+++ b/ansible/roles/security/defaults/main.yml
@@ -2,3 +2,6 @@
 sshd_permit_root_login: "no"
 sshd_password_authentication: "no"
 sshd_pubkey_authentication: "yes"
+
+ufw_allowed_ports:
+  - { port: "22", proto: "tcp" }
