--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -8,3 +8,7 @@ all:
       hosts:
         ai-commander:
           ansible_host: 192.168.1.221
+    reverse_proxies:
+      hosts:
+        reverse-proxy:
+          ansible_host: 192.168.1.225
